# r53utils

./: README.md  boto3-version.py  createzones.py  deletezones.py  getrrset.py  listrrsets.py  listzones.py  pyproject.toml  r53_create_zone_hierarchy.py  r53_deletezones.py  r53_getrrset.py  r53_listrrsets.py  r53_listzones.py  r53_testdnsanswer.py  r53_zonecreate.py  r53_zonedelete.py  r53utils.py  requirements-test.txt  setup.py  test_r53utils.py  testdnsanswer.py  zonename2id.py
examples/: createprivzone.py  createpubzone.py  createzones.py  deletezones.py  getrrset.py  listrrsets.py  listrrsets2.py  showversions.py  testdnsanswer.py  tf_zonehier.py  zonename2id.py
