[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "r53utils"
dynamic = ["version"]
license = "MIT"

authors = [
    { name = "Shumon Huque", email = "shuque@gmail.com" },
]
description = "Small module to work with Amazon Route53 DNS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/shuque/r53utils"
Issues = "https://github.com/shuque/r53utils/issues"

[tool.setuptools]
py-modules = ["r53utils"]

[tool.setuptools.dynamic]
version = {attr = "r53utils.__version__"}
